--- a/config.properties
+++ b/config.properties
@@ -3,4 +3,5 @@ UnchokingInterval=5
 OptimisticUnchokingInterval=15
 FileName=testFile.txt
 FileSize=10000232
-PieceSize=32768
+# PieceSize=32768
+PieceSize=32
