--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 NumberOfPreferredNeighbors=2
 UnchokingInterval=5
 OptimisticUnchokingInterval=15
-FileName=testFile.txt
-FileSize=10000232
-# PieceSize=32768
-PieceSize=32
+FileName=alice.txt
+# FileSize=10000232
+FileSize=148481
+PieceSize=128
