--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,6 @@
 NumberOfPreferredNeighbors=2
 UnchokingInterval=5
 OptimisticUnchokingInterval=15
-FileName=alice.txt
-# FileSize=10000232
-FileSize=148481
-PieceSize=128
+FileName=shakespeare.txt
+FileSize=5458199
+PieceSize=12800
